--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
