--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "session": "^0.1.0"
   }
 }
