--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "session": "^0.1.0"
   }
