--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "serve-static": "^1.15.0",
     "session": "^0.1.0"
   }
 }
